Web: Issue 958 (partial) Scroll wide examples
 - Examples on web pages which are divided into two columns
   run off the right-hand edge when the width of the browser
   window is reduced.  This patch adds a horizontal scroll
   bar to examples which do this.

--- a/Documentation/css/lilypond-web.css
+++ b/Documentation/css/lilypond-web.css
@@ -891,6 +891,18 @@ div.color4 h3 {
   line-height: 0.8;
 }
 
+.example {
+  position: relative;
+  left: -3em;
+}
+
+.h-scroll-auto {
+  position: relative;
+  left: 1em;
+  width: 240px;
+  overflow: auto;
+}
+
 .warning {
   background: #eef;
   text-align: left;
